<resources>
    <string name="app_name">IbarsGenshinFood</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="price">%d Mora</string>
    <string name="add_to_cart">Add to Cart : %d Mora</string>
    <string name="total_order">Total order : %d Mora</string>
    <string name="effect_label">Effect: </string>
    <string name="back">Back</string>
    <string name="ibars_genshin_food">Ibars Genshin Food</string>
    <string name="share_message">Hi, I have purchased %1$d menus at IbarsGenshinFood for a total of %2$d Mora. Do you want too?</string>
    <string name="name">Ibar Huttaqi Sulthon</string>
    <string name="email">ibarhuttaqi26@gmail.com</string>
    <string name="profile_description">I am a 7th semester student of the Informatics Engineering Study Program, Faculty of Computer Science, Brawijaya University, currently I am undergoing an internship program at PT XL Axiata.</string>
    <string name="search_menu">Search Menu..</string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="data_not_found">Data Not Found</string>
</resources>