...
//        )
        LazyVerticalGrid(
            columns = GridCells.Adaptive(160.dp),
//            contentPadding = PaddingValues(16.dp),
            horizontalArrangement = Arrangement.spacedBy(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier.testTag("MenuList")
        ) {
            item(span = { GridItemSpan(maxLineSpan) }) {
                SearchBar(
                    query = query,
                    onQueryChange = onQueryChange,
                    modifier = Modifier
...
