package com.example.ibarsgenshinfood.model

data class OrderMenu(
    val menu: Menu,
    val count: Int,
)
